Tests/4-java/src/imt.fil.a3/recherche.fj/parser/error/TypeError.java
package imt.fil.a3.recherche.fj.parser.error;

/**
 * Type Error
 **/
public interface TypeError {
}
